tests/baselines/reference/ambientExternalModuleWithRelativeExternalImportDeclaration.errors.txt
==== tests/cases/compiler/ambientExternalModuleWithRelativeExternalImportDeclaration.ts (3 errors) ====
    declare module "OuterModule" {
        import m2 = require("./SubModule");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,5): error TS2071: Unable to resolve external module '"./SubModule"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,5): error TS2072: Module cannot be aliased to a non-module type.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! ambientExternalModuleWithRelativeExternalImportDeclaration.ts(2,5): error TS2197: Import declaration in an ambient external module declaration cannot reference external module through relative external module name.
        class SubModule {
            public static StaticVar: number;
            public InstanceVar: number;
            public x: m2.c;
            constructor();
        }
        export = SubModule;
    }